# zeon

./: .gitignore  .pylintrc  README.md  linter.sh  pyproject.toml  test.py
notebook/: app.js  index.html  live-python.html
notebook/micropython/: LICENSE
scripts/: .pylintrc  linter.py
src/zeon/: __init__.py  __schema__.py  index.html  router.py
