[project]
name = "zeon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "starlette>=0.45.1",
    "uvicorn>=0.34.0",
    "docker>=7.1.0",
    "asyncssh>=2.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
